update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,16 @@ gen### Gradle template
 /.idea/
 /build/
 /.settings/
+/bin/
+/tmp/
+.mtj.tmp/
+.externalToolBuilders/
+.recommenders/
 gradle-app.setting
 !gradle-wrapper.jar
 .gradletasknamecache
-*.class
 *.log
 *.ctxt
-.mtj.tmp/
 *.jar
 *.war
 *.ear
@@ -26,23 +29,15 @@ hs_err_pid*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-assign2*.articles
-toefl.txt
-toefl_stemmed.txt
-.idea
 gen### Java template
 .metadata
-bin/
-tmp/
 *.tmp
 *.bak
 *.swp
 *~.nib
 local.properties
-.settings/
 .loadpath
 .recommenders
-.externalToolBuilders/
 *.launch
 *.pydevproject
 .cproject
@@ -52,7 +47,6 @@ local.properties
 .tern-project
 .texlipse
 .springBeans
-.recommenders/
 .cache-main
 .scala_dependencies
 .worksheet
